--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,22 +1,8 @@
 steps:
-  # Docker Build
-  - name: 'gcr.io/cloud-builders/docker'
-    args: [
-            'build',
-            '-t',
-            'us-central1-docker.pkg.dev/pub-demo-cb-ar/python-repo/my-app:${SHORT_SHA}',
-            '-t',
-            'us-central1-docker.pkg.dev/pub-demo-cb-ar/python-repo/my-app:latest',
-            '--cache-from',
-            'us-central1-docker.pkg.dev/pub-demo-cb-ar/python-repo/my-app:latest',
-            '.'
-          ]
+  - name: python:3.13.12-alpine3.23
+    entrypoint: pip3
+    args: ['install', '-r', 'requirements.txt']
 
-  # Docker push to Google Artifact Registry
-  - name: 'gcr.io/cloud-builders/docker'
-    args: ['push',  'us-central1-docker.pkg.dev/pub-demo-cb-ar/python-repo/my-app:${SHORT_SHA}']
-
-# Store images in Google Artifact Registry 
-images:
-  - us-central1-docker.pkg.dev/pub-demo-cb-ar/python-repo/my-app:${SHORT_SHA}
-  - us-central1-docker.pkg.dev/pub-demo-cb-ar/python-repo/my-app:latest
+  - name: python:3.13.12-alpine3.23
+    entrypoint: pytest
+    args: ['tests/*.py']
