--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,15 @@
+click==8.3.1
 Flask==2.2.3
 gunicorn==20.1.0
+iniconfig==2.3.0
+itsdangerous==2.2.0
+Jinja2==3.1.6
+MarkupSafe==3.0.3
 mysql-connector-python==8.0.32
+packaging==26.0
+pluggy==1.6.0
+protobuf==3.20.3
+Pygments==2.19.2
+pytest==9.0.2
+setuptools==81.0.0
+Werkzeug==2.2.2
