--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -7,6 +7,5 @@ steps:
     entrypoint: pytest
     args: ['tests/*.py']
 
-build:
-  service_account: 168912158152-compute@developer.gserviceaccount.com
-  logging: NONE
+options:
+ logging: GCS_ONLY
