--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -7,9 +7,11 @@ steps:
     args: ['-m', 'venv', '.venv']
 
   - name: python:3.13.12-alpine3.23
-    entrypoint: .venv/bin/python
+    id: Install project dependencies
+    entrypoint: .venv/bin/pip3
     args: ['install','-r','requirements.txt']
 
   - name: python:3.13.12-alpine3.23
+    id: Performe PyTests
     entrypoint: .venv/bin/pytest
     args: ['tests/*.py']
