--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -14,4 +14,4 @@ steps:
   - name: python:3.13.12-alpine3.23
     id: Performe PyTests
     entrypoint: .venv/bin/pytest
-    args: ['tests/*.py']
+    args: ['tests/']
