feat(cbuild): add build and push steps

--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -15,3 +15,9 @@ steps:
     id: Performe PyTests
     entrypoint: .venv/bin/pytest
     args: ['tests/']
+
+  - name: gcr.io/cloud-builders/docker
+    args: ['build', '-t', 'us-south1-docker.pkg.dev/venturini-brazil/flask-app/web-api:$BUILD_ID', '.']
+
+  - name: gcr.io/cloud-builders/docker
+    args: ['push', '-t', 'us-south1-docker.pkg.dev/venturini-brazil/flask-app/web-api:$BUILD_ID', '.']
