--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -20,4 +20,15 @@ steps:
     id: Build container image
     args: ['build', '-t', 'us-south1-docker.pkg.dev/venturini-brazil/flask-app/web-api:$BUILD_ID', '.']
 
+  - name: gcr.io/cloud-builders/gcloud
+    id: Deploy into Cloud Engine
+    entrypoint: bash
+    args:
+      - -c
+      - |
+        gcloud compute ssh web-api-flask \
+          --command "
+            docker pull us-south1-docker.pkg.dev/venturini-brazil/flask-app/web-api:$BUILD_ID          
+          "
+
 images: ['us-south1-docker.pkg.dev/venturini-brazil/flask-app/web-api:$BUILD_ID']
