--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -27,6 +27,7 @@ steps:
       - -c
       - |
         gcloud compute ssh web-api-flask \
+          --region us-central1 \
           --command "
             docker pull us-south1-docker.pkg.dev/venturini-brazil/flask-app/web-api:$BUILD_ID          
           "
