fix(cbuild): specify zone instead of region

--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -20,6 +20,10 @@ steps:
     id: Build container image
     args: ['build', '-t', 'us-south1-docker.pkg.dev/venturini-brazil/flask-app/web-api:$BUILD_ID', '.']
 
+  - name: gcr.io/cloud-builders/docker
+    id: Store container image
+    args: ['push', 'us-south1-docker.pkg.dev/venturini-brazil/flask-app/web-api:$BUILD_ID']
+
   - name: gcr.io/cloud-builders/gcloud
     id: Deploy into Cloud Engine
     entrypoint: bash
@@ -27,7 +31,7 @@ steps:
       - -c
       - |
         gcloud compute ssh web-api-flask \
-          --region us-central1 \
+          --zone us-central1-a \
           --command "
             docker pull us-south1-docker.pkg.dev/venturini-brazil/flask-app/web-api:$BUILD_ID          
           "
