--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -45,11 +45,9 @@ steps:
       - -c
       - |
         for instance_info in $(gcloud compute instances list --format="csv(name, zone.basename())" | grep -v "name,zone"); do
-          INSTANCE=$(cut -d, -f1 <<<$instance_info)
-          ZONE=$(cut -d, -f2 <<<$instance_info)
 
-          gcloud compute ssh danielventurini021@$INSTANCE \
-            --zone $ZONE \
+          gcloud compute ssh danielventurini021@$(cut -d, -f1 <<<$instance_info) \
+            --zone $(cut -d, -f2 <<<$instance_info) \
             --command "
               gcloud auth print-access-token | docker login \
               -u oauth2accesstoken \
@@ -64,11 +62,9 @@ steps:
       - -c
       - |
         for instance_info in $(gcloud compute instances list --format="csv(name, zone.basename())" | grep -v "name,zone"); do
-          INSTANCE=$(cut -d, -f1 <<<$instance_info)
-          ZONE=$(cut -d, -f2 <<<$instance_info)
 
-          gcloud compute ssh danielventurini021@$INSTANCE \
-            --zone $ZONE \
+          gcloud compute ssh danielventurini021@$(cut -d, -f1 <<<$instance_info) \
+            --zone $(cut -d, -f2 <<<$instance_info) \
             --command "
               docker compose down -v
               sed -Ei "s,flask-app/web-api:.*$,flask-app/web-api:$BUILD_ID,g" docker-compose.yaml
