--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -9,4 +9,17 @@ jobs:
   checkout:
     steps:
       - name: Checkout source code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
+
+  install:
+    steps:
+      - name: Setup virtual environment
+        run: python3 -m venv .venv
+
+      - name: Install Python dependencies
+        run: ./venv/bin/pip3 install -r requirements.txt
+
+  test:
+    steps:
+      - name: Perform tests with Pytest
+        run: ./venv/bin/pytest
