--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -12,6 +12,7 @@ jobs:
         uses: actions/checkout@v4
 
   install:
+    runs-on: ubuntu-latest
     steps:
       - name: Setup virtual environment
         run: python3 -m venv .venv
@@ -20,6 +21,7 @@ jobs:
         run: ./venv/bin/pip3 install -r requirements.txt
 
   test:
+    runs-on: ubuntu-latest
     steps:
       - name: Perform tests with Pytest
         run: ./venv/bin/pytest
