--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -6,23 +6,17 @@ on:
       - main
 
 jobs:
-  checkout:
+  build:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout source code
         uses: actions/checkout@v4
 
-  install:
-    runs-on: ubuntu-latest
-    steps:
       - name: Setup virtual environment
         run: python3 -m venv .venv
 
       - name: Install Python dependencies
         run: ./venv/bin/pip3 install -r requirements.txt
 
-  test:
-    runs-on: ubuntu-latest
-    steps:
       - name: Perform tests with Pytest
         run: ./venv/bin/pytest
