--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -16,7 +16,7 @@ jobs:
         run: python3 -m venv .venv
 
       - name: Install Python dependencies
-        run: ./venv/bin/pip3 install -r requirements.txt
+        run: ./.venv/bin/pip3 install -r requirements.txt
 
       - name: Perform tests with Pytest
-        run: ./venv/bin/pytest
+        run: ./.venv/bin/pytest
